--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,1 @@
-SUPABASE_CONNECTION_URL=postgresql://postgres.qolubaooofhdvewqljhg:K4t%40l0n-2024@aws-0-eu-central-1.pooler.supabase.com:6543/postgres
+SUPABASE_CONNECTION_URL=postgresql://postgres.ofrgakbqfzzqpmwcjwzv:Tbbabgp69!!@aws-0-eu-central-1.pooler.supabase.com:6543/postgres
